--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
       <span class="date">Joined in 2014</span>
     </div>
     <div class="description">
-      Stevie Feliciano is a library scientist living in New York City. She likes to spend her time reading, running, and writing.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </div>
   </div>
   <div class="extra content">
