--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <title>DESN 378 Website Starter</title>
+  <title>P5 - Weather</title>
 
   <link rel="stylesheet" type="text/css" href="css/semantic.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -16,33 +16,18 @@
 
 <body>
   
-  <h1>378 Website Starter</h1>
+  <h1>Weather</h1>
 
-  <div class="ui card">
-  <div class="image">
-    <img src="/images/avatar/large/stevie.jpg">
-  </div>
-  <div class="content">
-    <a class="header">Stevie Feliciano</a>
-    <div class="meta">
-      <span class="date">Joined in 2014</span>
-    </div>
-    <div class="description">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </div>
-  </div>
-  <div class="extra content">
-    <a>
-      <i class="user icon"></i>
-      22 Friends
-    </a>
-  </div>
-</div>
+  <article >
+    boop
+  </article>
+
+
+
+
+
+
+
   
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/semantic.js"></script>
