--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <title>P5 - Weather</title>
 
   <link rel="stylesheet" type="text/css" href="css/semantic.css">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+
 
 </head>
 
@@ -18,8 +20,8 @@
   
   <h1>Weather</h1>
 
-  <article >
-    boop
+  <article>
+    <div id="weather"></div>
   </article>
 
 
