--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
 
 <body>
   
-  <h1>Weather</h1>
-
+  <h1 id="location">Weather</h1>
+   <p class="date"></p>
+   <p class="time"></p>
   <article>
     <div id="weather"></div>
+    <div></div>
   </article>
+
 
 
 
