--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 
 </head>
 
-<body>
+<body class="day">
   
   <h1 id="location">Weather</h1>
    <p class="date"></p>
    <p class="time"></p>
-  <article>
+  
+
+  <article class="articleDay">
     <div id="weather"></div>
     <div></div>
   </article>
