--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
 <body class="day">
   
   <h1 id="location">Weather</h1>
-   <p class="date"></p>
-   <p class="time"></p>
   
 
   <article class="articleDay">
@@ -29,7 +27,10 @@
   </article>
 
 
-
+  <div class="dateTime">
+   <p class="date"></p>
+   <p class="time"></p>
+ </div>
 
 
 
