--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
   
 
   <article class="articleDay">
+    
+ <div><i class="huge rain icon"></i></div>
+
     <div id="weather"></div>
+
+   
+    
+
     <div></div>
   </article>
 
