--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <article class="articleDay">
     
- <div><i class="huge rain icon"></i></div>
+ <div class="iconBox"><i class="huge rain icon"></i></div>
 
     <div id="weather"></div>
 
