--- a/index.html
+++ b/index.html
@@ -22,15 +22,13 @@
   
 
   <article class="articleDay">
-    
- <div class="iconBox"><i class="huge rain icon"></i></div>
+  <i class="huge rain icon"></i>
+ <div class="iconBox"></div>
 
     <div id="weather"></div>
 
    
-    
 
-    <div></div>
   </article>
 
 
