--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body class="day">
   
 
-  
+  <div class="zipSearch"><input type="text" id="getWeather" placeholder="Enter Weather Here"></input></div>
 
   <article class="articleDay">
 
