--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 <body class="day">
   
 
-  <div class="zipSearch"><input type="text" id="getWeather" placeholder="Enter Weather Here"></input></div>
+
 
   <article class="articleDay">
+    <input type="text" id="getWeather" placeholder="Enter Zip Code "></input>
+    <button class="ui button">Get Weather</button>
 
   <h1 id="location">Weather</h1>
   
